maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
	var nombre:Int=0
    while (estSurBiscuit==false) {
    	nombre=random3()
    	if (nombre==0) {
    		if (estFaceMur==false) {
    			avance()
    		}
    	}else if (nombre==1) {
    		gauche()
    	}else if (nombre==2) {
    		droite()
    	}
    }
    prendBiscuit()
}
